--- a/app-frontend/angular.json
+++ b/app-frontend/angular.json
@@ -98,6 +98,7 @@
             "inlineStyleLanguage": "scss",
             "assets": [
               {
+                "output": "/",
                 "glob": "**/*",
                 "input": "public"
               }
