--- a/app-frontend/package.json
+++ b/app-frontend/package.json
@@ -23,8 +23,10 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.1",
     "@angular/ssr": "^19.2.0",
+    "angular-new-router": "github:angular/router",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
+    "g": "^2.0.1",
     "material-icons": "^1.13.14",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
